# symlink_gui

./: Cargo.toml  README.md
src/: main.rs  symlink_gui.rs
